--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
   },
   "man": [
     "contributors-gen.1"
-  ]
+  ],
+  "homepage": "https://github.com/Yash-Singh1/contributors-gen-cli#readme",
+  "bugs": {
+    "url": "https://github.com/Yash-Singh1/contributors-gen-cli/issues"
+  },
+  "browser": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Yash-Singh1/contributors-gen-cli"
+  }
 }
