--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "contributors-gen": "^1.1.2",
-    "meow": "^9.0.0"
+    "meow": "^9.0.0",
+    "update-notifier": "^5.1.0"
   },
   "man": [
     "contributors-gen.1"
